# LLM

./: .env.example  .gitignore  Dockerfile  README.ja.md  README.md  app.py  docker-compose.yml  inference.py  main_controller.py  modal_pretrain.py  modal_sft.py  pytest.ini  requirements.txt  setup.sh
core_llm/: README.md  pyproject.toml  requirements-core.txt
core_llm/configs/: model_small_ja.yaml  model_small_ja_sample.yaml  model_tiny_ja.yaml  model_tiny_ja_sample.yaml  tokenizer_ja_base.yaml  tokenizer_ja_tiny_sample.yaml  train_local_cpu.yaml  train_sft_small_sample.yaml  train_tiny_sample_10k.yaml  train_tiny_sample_15k.yaml  train_tiny_sample_20k.yaml  train_tiny_sample_30k.yaml  train_tiny_sample_3k.yaml  train_tiny_sample_5k.yaml  train_tiny_sample_8k.yaml  train_tiny_sample_cpu.yaml  train_tiny_sample_long.yaml
core_llm/scripts/: compare_runs.py  discover_government_seed_urls.py  eval_perplexity.py  evaluate_prompt_set.py  fetch_government_corpus.py  generate.py  index_runs.py  merge_manifests.py  prepare_curated_manifests.py  prepare_dataset.py  prepare_manifest.py  prepare_sft_manifest.py  prepare_wikipedia_manifest.py  run_pretrain_mix.py  run_wiki_tiny.py  train.py  train_sft.py  train_tokenizer.py
core_llm/tests/: conftest.py  test_binary_dataset.py  test_checkpoint_resume.py  test_discord_notify.py  test_env.py  test_evaluate_prompt_set_smoke.py  test_generate_smoke.py  test_government_fetch.py  test_government_seed_discovery.py  test_manifest_ops.py  test_manifest_schema.py  test_prepare_curated_manifests.py  test_prepare_manifest.py  (+12 more)
(+160 files in other folders)
