[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-llm"
version = "0.1.0"
description = "Research core for building a small self-trained Japanese-first LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "sentencepiece>=0.2.0",
  "torch>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
